--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "linebreak-style":0,
+    "no-tabs":0,
+    "import/prefer-default-export": 0
+  }
 }
