--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://yb3g4yqvoa7s8ipknhyo:pscale_pw_NhCOqdVQ3RLSUSBSdvfz4igNvKoh4axF1WmLjYfxpff@aws.connect.psdb.cloud/bd_listade_tarefas?sslaccept=strict'
+DATABASE_URL=''
