--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=''
+DATABASE_URL='mysql://p6vpu73a3iwk31ivici4:pscale_pw_pKJn667TIfvUxnRWwPSYXZgE2PMCqTidNr6aSWaVXKw@aws.connect.psdb.cloud/bd_listade_tarefas?sslaccept=strict'
