:recycle: refactor: Mudança na forma de tipagem

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://p6vpu73a3iwk31ivici4:pscale_pw_pKJn667TIfvUxnRWwPSYXZgE2PMCqTidNr6aSWaVXKw@aws.connect.psdb.cloud/bd_listade_tarefas?sslaccept=strict'
+DATABASE_URL='mysql://bfs9xx71dzs8miva014e:pscale_pw_LMBOMzBCDMgt0EfOy80LBMaEZDBEJsFcErdaWMf1pKd@aws.connect.psdb.cloud/bd_listade_tarefas?sslaccept=strict'
