--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
   "rules": {
     "linebreak-style":0,
     "no-tabs":0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "import/extensions": "off",
+    "default-case": "off"
   }
 }
