--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-#DATABASE_URL='mysql://ei3j8pwd7ysbs9t924le:pscale_pw_hr4IbSI93gJf3WuxTFAZ52MlBO7Hne2jmTtE0iyvE8s@aws.connect.psdb.cloud/bd_listade_tarefas?sslaccept=strict'
+#coloquei aqui a conexão com um banco de dados MySQL
+DATABASE_URL=''
